# cython-packages

./: .gitignore  README.md  bootstrap.h  bootstrap.pxd  build.py  pyproject.toml  test.py
cythontools/package/: builder.py  common.py  core.py  preprocessors.py
src/: bootstrap.pyx  modules.pyx
src/root/: file1.py  file3.py  file4.py
src/root/subpackage/: submodule1.py  submodule2.py
tools/: build.py
