[project]
name = "cythontools"
version = "0.1.0"
description = ""
authors = [
    { name = "Daniel Atanasov", email = "daniel.a.atanasov97@gmail.com" },
]
maintainers = [
    { name = "Daniel Atanasov", email = "daniel.a.atanasov97@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["Cython", "setuptools (>=80.1.0,<81.0.0)"]

[build-system]
requires = ["Cython", "setuptools (>=80.1.0,<81.0.0)", "hatchling"]
build-backend = "tools.build"
backend-path = ["."]

[tool.hatch.build.targets.wheel.hooks.cythontools]
package_paths = ["cythontools"]
check_timestamps = false

[tool.hatch.envs.default]
dev-mode = false
skip-install = true
dependencies = ["hatchling"]